[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { git = "https://github.com/aatukaj/ts-rs.git", branch = "borrow-type-args" }
futures-util = "0.3"
log = "0.4"
env_logger="0.10"
rand="0.8"
indexmap = { version = "2.0.2", features = ["serde"] }


[dependencies.uuid]
version = "1.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
