[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", features = ["uuid-impl"]}
futures-util = "0.3"
rand="0.8"
indexmap = { version = "2.0.2", features = ["serde"] }
axum = {version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = {version="0.5", features = ["cors", "trace"]}
axum-extra = { version = "0.9.2", features = ["cookie"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
parking_lot = "0.12.1"

[dependencies.uuid]
version = "1.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
